# cpputest_test

./: .gitignore  CMakeLists.txt  Makefile
src/: Adder.c  Adder.h  Main.c
test/: TestCore.cpp
